--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact - KarlTech</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech">
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
     <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
@@ -32,21 +32,16 @@
       <h3>Horaires d'ouverture</h3>
       <ul>
         <li>Lundi au vendredi : 17 h à 21 h</li>
-        <li>Samedi et dimanche : 9 h à 18 h</li>
+        <li>Samedi et dimanche : 8 h à 18 h</li>
       </ul>
 
       <h3>Formulaire de contact</h3>
       <form action="https://formspree.io/f/mnnvdepz" method="POST">
-        <input type="text" name="nom" placeholder="Votre nom" required>
-        <input type="email" name="email" placeholder="Votre adresse e-mail" required>
+        <input type="text" name="nom" placeholder="Votre nom" required />
+        <input type="email" name="email" placeholder="Votre adresse e-mail" required />
         <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
         <button type="submit">Envoyer</button>
       </form>
-
-      <h3>Prendre rendez-vous</h3>
-      <a href="https://calendly.com/karltech?lang=fr" target="_blank" style="display: inline-block; background-color: #2d2d44; color: white; padding: 12px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">
-        Réserver un rendez-vous 📅
-      </a>
     </section>
   </main>
 
