--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 60px; float: left; margin-right: 20px;">
-    <div>
-      <h1>KarlTech</h1>
-      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
-    </div>
-    <div style="clear: both;"></div>
-  </header>
+ <header>
+  <img src="logo_karltech.png" alt="Logo KarlTech" />
+  <div>
+    <h1>KarlTech</h1>
+    <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+  </div>
+</header>
+
 
   <nav>
     <a href="index.html" class="active">Accueil</a>
