--- a/faq.html
+++ b/faq.html
@@ -8,13 +8,13 @@
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 80px; float: left; margin-right: 20px;">
-    <div>
-      <h1>KarlTech</h1>
-      <p>Votre expert en soutien informatique à Shawinigan et environs</p>
-    </div>
-    <div style="clear: both;"></div>
-  </header>
+  <img src="logo_karltech.png" alt="Logo KarlTech" />
+  <div>
+    <h1>KarlTech</h1>
+    <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+  </div>
+</header>
+
 
   <nav>
     <a href="index.html">Accueil</a>
