--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" />
-    <div>
-      <h1>KarlTech</h1>
-      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
-    </div>
+  <img src="logo_karltech.png" alt="Logo KarlTech" />
+  <div>
+    <h1>KarlTech</h1>
+    <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+  </div>
+</header>
+
   </header>
 
   <nav>
