--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <header>
-  <img src="logo_karltech.png" alt="Logo KarlTech" />
-  <div>
-    <h1>KarlTech</h1>
-    <p>Soutien informatique personnalisé à Shawinigan et environs</p>
-  </div>
-</header>
-
+  <header>
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
+    <div>
+      <h1>KarlTech</h1>
+      <p>Soutien informatique personnalisé à Shawinigan et environs</p>
+    </div>
+  </header>
 
   <nav>
     <a href="index.html" class="active">Accueil</a>
@@ -23,54 +22,72 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <section>
-    <h2>Pourquoi choisir KarlTech ?</h2>
-    <p>
-      Chez <strong>KarlTech</strong>, nous croyons que chaque client mérite un service informatique à la fois <strong>fiable, personnalisé et abordable</strong>.
-      Que vous soyez un particulier ou une petite entreprise, nous offrons une assistance rapide et adaptée à vos besoins.
-    </p>
-    <ul>
-      <li><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
-      <li><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales</li>
-      <li><strong>Transparence totale</strong> sur les tarifs et les interventions</li>
-      <li><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
-      <li><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</li>
-      <li><strong>Flexibilité et disponibilité</strong> dans la région de Shawinigan et ses environs</li>
-    </ul>
-    <p>
-      Notre approche humaine et professionnelle fait la différence : nous privilégions la clarté, la pédagogie et la satisfaction à long terme de nos clients.
-    </p>
-  </section>
+  <main>
+    <section id="why">
+      <h2>Pourquoi choisir KarlTech ?</h2>
+      <p>
+        Chez <strong>KarlTech</strong>, nous croyons que chaque client mérite un service informatique à la fois <strong>fiable, personnalisé et abordable</strong>.
+        Que vous soyez un particulier ou une petite entreprise, nous offrons une assistance rapide et adaptée à vos besoins.
+      </p>
+      <ul>
+        <li class="animate-on-scroll"><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
+        <li class="animate-on-scroll"><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales</li>
+        <li class="animate-on-scroll"><strong>Transparence totale</strong> sur les tarifs et les interventions</li>
+        <li class="animate-on-scroll"><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
+        <li class="animate-on-scroll"><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</li>
+        <li class="animate-on-scroll"><strong>Flexibilité et disponibilité</strong> dans la région de Shawinigan et ses environs</li>
+      </ul>
+      <p>
+        Notre approche humaine et professionnelle fait la différence : nous privilégions la clarté, la pédagogie et la satisfaction à long terme de nos clients.
+      </p>
+    </section>
 
-  <section>
-    <h2>Nos services populaires</h2>
-    <h3>Formatage et réinstallation système</h3>
-    <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows, mises à jour et pilotes.</p>
+    <section>
+      <h2>Nos services populaires</h2>
+      <h3>Formatage et réinstallation système</h3>
+      <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows, mises à jour et pilotes.</p>
 
-    <h3>Suppression de virus et sécurisation</h3>
-    <p>Nettoyage complet de votre système avec suppression des logiciels malveillants et amélioration des performances.</p>
+      <h3>Suppression de virus et sécurisation</h3>
+      <p>Nettoyage complet de votre système avec suppression des logiciels malveillants et amélioration des performances.</p>
 
-    <h3>Assistance à distance</h3>
-    <p>Intervention rapide via AnyDesk, sans déplacement, pour une solution simple et efficace.</p>
+      <h3>Assistance à distance</h3>
+      <p>Intervention rapide via AnyDesk, sans déplacement, pour une solution simple et efficace.</p>
 
-    <h3>Installation de pièces ou logiciels</h3>
-    <p>Mise à niveau de votre PC ou ajout de logiciels essentiels pour votre productivité et confort d'utilisation.</p>
+      <h3>Installation de pièces ou logiciels</h3>
+      <p>Mise à niveau de votre PC ou ajout de logiciels essentiels pour votre productivité et confort d'utilisation.</p>
 
-    <p><a href="services_tarifs.html" style="font-weight: bold; color: #66b2ff;">→ Voir tous les services et tarifs</a></p>
-  </section>
+      <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
+    </section>
 
-  <section id="apropos">
-    <h2>À propos</h2>
-    <p>
-      Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.
-    </p>
-    <p>
-      Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.
-    </p>
-  </section>
+    <section id="apropos">
+      <h2>À propos</h2>
+      <p>
+        Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.
+      </p>
+      <p>
+        Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.
+      </p>
+    </section>
+  </main>
 
   <footer>
     &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const items = document.querySelectorAll(".animate-on-scroll");
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("visible");
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.2 });
+
+      items.forEach(item => observer.observe(item));
+    });
+  </script>
 </body>
 </html>
