--- a/index.html
+++ b/index.html
@@ -23,23 +23,37 @@
   </nav>
 
   <main>
+    <!-- Carousel “Pourquoi choisir KarlTech ?” -->
     <section id="why">
       <h2>Pourquoi choisir KarlTech ?</h2>
-      <p>
-        Chez <strong>KarlTech</strong>, nous croyons que chaque client mérite un service informatique à la fois <strong>fiable, personnalisé et abordable</strong>.
-        Que vous soyez un particulier ou une petite entreprise, nous offrons une assistance rapide et adaptée à vos besoins.
-      </p>
-      <ul>
-        <li class="animate-on-scroll"><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
-        <li class="animate-on-scroll"><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales</li>
-        <li class="animate-on-scroll"><strong>Transparence totale</strong> sur les tarifs et les interventions</li>
-        <li class="animate-on-scroll"><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
-        <li class="animate-on-scroll"><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</li>
-        <li class="animate-on-scroll"><strong>Flexibilité et disponibilité</strong> dans la région de Shawinigan et ses environs</li>
+      <div class="why-slider">
+        <div class="why-slide active" data-index="0">
+          <p><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</p>
+        </div>
+        <div class="why-slide" data-index="1">
+          <p><strong>Disponibilité en soirée</strong> – idéal pour les clients qui travaillent le jour et souhaitent un dépannage après les heures normales</p>
+        </div>
+        <div class="why-slide" data-index="2">
+          <p><strong>Transparence totale</strong> sur les tarifs et les interventions</p>
+        </div>
+        <div class="why-slide" data-index="3">
+          <p><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</p>
+        </div>
+        <div class="why-slide" data-index="4">
+          <p><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</p>
+        </div>
+        <div class="why-slide" data-index="5">
+          <p><strong>Flexibilité et disponibilité</strong> dans la région de Shawinigan et ses environs</p>
+        </div>
+      </div>
+      <ul class="why-nav">
+        <li class="active" data-index="0"></li>
+        <li data-index="1"></li>
+        <li data-index="2"></li>
+        <li data-index="3"></li>
+        <li data-index="4"></li>
+        <li data-index="5"></li>
       </ul>
-      <p>
-        Notre approche humaine et professionnelle fait la différence : nous privilégions la clarté, la pédagogie et la satisfaction à long terme de nos clients.
-      </p>
     </section>
 
     <section>
@@ -61,12 +75,8 @@
 
     <section id="apropos">
       <h2>À propos</h2>
-      <p>
-        Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.
-      </p>
-      <p>
-        Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.
-      </p>
+      <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
+      <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
     </section>
   </main>
 
@@ -75,18 +85,18 @@
   </footer>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      const items = document.querySelectorAll(".animate-on-scroll");
-      const observer = new IntersectionObserver((entries) => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add("visible");
-            observer.unobserve(entry.target);
-          }
+    // Navigation carousel “Pourquoi choisir KarlTech ?”
+    document.querySelectorAll('.why-nav li').forEach(dot => {
+      dot.addEventListener('click', () => {
+        const idx = dot.dataset.index;
+        // Met à jour les puces
+        document.querySelectorAll('.why-nav li').forEach(d => d.classList.remove('active'));
+        dot.classList.add('active');
+        // Affiche la slide correspondante
+        document.querySelectorAll('.why-slide').forEach(slide => {
+          slide.classList.toggle('active', slide.dataset.index === idx);
         });
-      }, { threshold: 0.2 });
-
-      items.forEach(item => observer.observe(item));
+      });
     });
   </script>
 </body>
