--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KarlTech - Soutien Informatique</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* On force #why à occuper tout l'écran pour masquer ce qui suit */
-    #why {
-      height: 100vh;
-      overflow: hidden;
-      position: relative;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -31,40 +23,41 @@
   </nav>
 
   <main>
-    <!-- Carousel plein écran -->
+    <!-- Carousel “Pourquoi choisir KarlTech ?” -->
     <section id="why">
       <h2>Pourquoi choisir KarlTech ?</h2>
-      <div class="why-slider">
-        <div class="why-slide active" data-index="0">
-          <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort. Que vous préfériez un technicien sur place ou un dépannage en ligne via AnyDesk, nous garantissons une intervention rapide et sécurisée. Chaque session à distance est chiffrée, et toutes vos données restent privées.</p>
+      <div class="why-container">
+        <div class="why-slider">
+          <div class="why-slide active" data-index="0">
+            <p><strong>Service à domicile ou à distance</strong> – Nous nous adaptons à votre emploi du temps et à votre confort. Que vous préfériez un technicien sur place ou un dépannage en ligne via AnyDesk, nous garantissons une intervention rapide et sécurisée. Chaque session à distance est chiffrée, et toutes vos données restent privées.</p>
+          </div>
+          <div class="why-slide" data-index="1">
+            <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine, pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
+          </div>
+          <div class="why-slide" data-index="2">
+            <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts et les étapes. Aucun supplément caché : vous savez exactement ce que vous payez. Vous recevez toujours un devis écrit et validé avant tout travail.</p>
+          </div>
+          <div class="why-slide" data-index="3">
+            <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique incompréhensible ! Nous expliquons chaque étape en termes simples, pour que vous preniez des décisions éclairées et appreniez à garder votre système performant sur le long terme.</p>
+          </div>
+          <div class="why-slide" data-index="4">
+            <p><strong>Expérience concrète</strong> – Avec plus de 10 ans d’expertise en dépannage Windows, optimisation de PC et installation de périphériques, nous maîtrisons tous les scénarios, des plus courants aux plus complexes, avec rigueur et efficacité.</p>
+          </div>
+          <div class="why-slide" data-index="5">
+            <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous ou à distance dans la région. En plus des soirées en semaine, nous sommes disponibles les fins de semaine pour vos urgences et assurons un suivi régulier de vos installations.</p>
+          </div>
         </div>
-        <div class="why-slide" data-index="1">
-          <p><strong>Disponibilité en soirée</strong> – Vous travaillez en journée ? Pas de souci ! Nos plages horaires s’étendent jusqu’à 21 h en semaine, pour que vous puissiez profiter de votre ordinateur sans interruption. Planifiez votre rendez-vous quand cela vous convient, sans sacrifier vos obligations.</p>
-        </div>
-        <div class="why-slide" data-index="2">
-          <p><strong>Transparence totale</strong> – Avant chaque intervention, nous détaillons clairement les coûts et les étapes. Aucun supplément caché : vous savez exactement ce que vous payez. Vous recevez toujours un devis écrit et validé avant tout travail.</p>
-        </div>
-        <div class="why-slide" data-index="3">
-          <p><strong>Conseils clairs et adaptés</strong> – Fini le jargon technique incompréhensible ! Nous expliquons chaque étape en termes simples, pour que vous preniez des décisions éclairées et appreniez à garder votre système performant sur le long terme.</p>
-        </div>
-        <div class="why-slide" data-index="4">
-          <p><strong>Expérience concrète</strong> – Avec plus de 10 ans d’expertise en dépannage Windows, optimisation de PC et installation de périphériques, nous maîtrisons tous les scénarios, des plus courants aux plus complexes, avec rigueur et efficacité.</p>
-        </div>
-        <div class="why-slide" data-index="5">
-          <p><strong>Flexibilité et proximité</strong> – Basés à Shawinigan, nous intervenons rapidement chez vous ou à distance dans la région. En plus des soirées en semaine, nous sommes disponibles les fins de semaine pour vos urgences et assurons un suivi régulier de vos installations.</p>
-        </div>
+        <ul class="why-nav">
+          <li class="active" data-index="0"></li>
+          <li data-index="1"></li>
+          <li data-index="2"></li>
+          <li data-index="3"></li>
+          <li data-index="4"></li>
+          <li data-index="5"></li>
+        </ul>
       </div>
-      <ul class="why-nav">
-        <li class="active" data-index="0"></li>
-        <li data-index="1"></li>
-        <li data-index="2"></li>
-        <li data-index="3"></li>
-        <li data-index="4"></li>
-        <li data-index="5"></li>
-      </ul>
     </section>
 
-    <!-- Ces sections sont **toujours** dans le flux normal, mais masquées sous #why -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
       <h3>Formatage et réinstallation système</h3>
@@ -82,7 +75,7 @@
       <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
     </section>
 
-    <section id="apropos">
+    <section id="aproposSection">
       <h2>À propos</h2>
       <p>Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.</p>
       <p>Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.</p>
@@ -96,6 +89,7 @@
   <script>
     const dots   = document.querySelectorAll('.why-nav li');
     const slides = document.querySelectorAll('.why-slide');
+    const whySect= document.getElementById('why');
 
     function setActive(idx) {
       slides.forEach(sl => sl.classList.toggle('active', sl.dataset.index === idx));
@@ -106,21 +100,13 @@
       dot.addEventListener('click', () => setActive(dot.dataset.index));
     });
 
-    // Tant que on n'est pas sur la dernière puce (5), on gère le carousel.
-    // Dès qu'on atteint la puce 5 et qu'on scroll vers le bas,
-    // on retire l'interception pour laisser défiler la page.
-    const whySection = document.getElementById('why');
-    whySection.addEventListener('wheel', e => {
+    whySect.addEventListener('wheel', e => {
+      e.preventDefault();
       const current = Array.from(dots).findIndex(d => d.classList.contains('active'));
-      if (current < 5) {
-        // on reste dans le carousel
-        e.preventDefault();
-        let next = current + (e.deltaY > 0 ? 1 : -1);
-        if (next < 0) next = dots.length - 1;
-        if (next >= dots.length) next = 0;
-        setActive(String(next));
-      }
-      // si current === 5 et deltaY > 0, on ne fait rien : la page défile normalement
+      let next = current + (e.deltaY > 0 ? 1 : -1);
+      if (next < 0) next = dots.length - 1;
+      if (next >= dots.length) next = 0;
+      setActive(String(next));
     }, { passive: false });
   </script>
 </body>
